import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Player {
  // Player UUID.
  required string uuid = 1;
  // Player name.
  required string name = 2;
  // Is the player currently online.
  required bool online = 3;
  // First join date of player.
  required google.protobuf.Timestamp first_join = 4;
  // Last logout date.
  optional google.protobuf.Timestamp last_logout = 5;
  // Current server location.
  optional string server_id = 6;
}

message CreatePlayerRequest {
  // Player UUID.
  required string uuid = 1;
  // Player name.
  required string name = 2;
}

message GetPlayerRequest {
  // Query by either name or uuid.
  oneof query {
    string name = 1;
    string uuid = 2;
  }
}

message PlayerJoinRequest {
  // Player UUID.
  required string uuid = 1;
  // Server which the player joined.
  required string server_id = 2;
}

message PlayerQuitRequest {
  // Player UUID.
  required string uuid = 1;
}

service PlayerService {
  // Should be called on first join of the player to populate their data in the DB.
  rpc CreatePlayer (CreatePlayerRequest) returns (Player) {}
  rpc GetPlayerData (GetPlayerRequest) returns (Player) {}
  // Called when player joins the server, this should be sent every time the player changes servers.
  rpc PlayerJoin (PlayerJoinRequest) returns (google.protobuf.Empty) {}
  // Called when player leaves the server entirely.
  rpc PlayerQuit (PlayerQuitRequest) returns (google.protobuf.Empty) {}
}